--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>lk.ijse</groupId>
     <artifactId>ChatApp</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>Client</module>
+        <module>Server</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
